--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+body, html {
+  height: 100%;
+}
+
+section {
+  padding: 25px 85px;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
